--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--HEADER-->
     <header>
         <div class="logo_container">
-            <img src="./img/logo.png" alt="">
+            <img src="./img/LOGO.png" alt="">
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
