--- a/pages/merch.html
+++ b/pages/merch.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merch</title>
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="../img/LOGO.png">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <img src="../img/logo.png" alt="">
+            <img src="../img/LOGO.png" alt="">
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
