--- a/pages/discography.html
+++ b/pages/discography.html
@@ -19,8 +19,8 @@
 <body>
     <!--HEADER-->
     <header>
-        <div class="LOGO_container">
-            <img src="../img/logo.png" alt="">
+        <div class="logo_container">
+            <img src="../img/LOGO.png" alt="">
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
