--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Official Existencia">
+    <meta name="keywords" content="metalcore/djent band, albums, gallery, and merch, stay tuned for upcoming releases">
     <title>Index</title>
     <link rel="icon" href="./img/logo.png">
     <!--BOOTSTRAP-->
@@ -43,7 +45,8 @@
 
 
     <!--SECTION-->
-    <section>
+    <section class="hero">
+        <section>
         <article>
             <div class="portada">
                 <img src="./img/hometodos.jpg" alt="">
@@ -101,6 +104,7 @@
             <hr>
         </div>
     </div>
+</section>
     <!--FIN-DE-HR-->
 
     <!--footer-->
