--- a/pages/merch.html
+++ b/pages/merch.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Official Existencia">
+    <meta name="keywords" content="metalcore/djent band, albums, gallery, and merch, stay tuned for upcoming releases">
     <title>Merch</title>
     <link rel="icon" href="../img/logo.png">
     <!--Bootstrap-->
@@ -64,7 +66,12 @@
         </div>
     </section>
     <!--FIN-DE-SECTION-->
+        
+    <!--BOTON-->
 
+    <div class="shopbox">
+        <a class="shopbtn" href="#"></a>
+    </div>
 
     <!--FOOTER-->
     <footer class="footer">
