--- a/pages/discography.html
+++ b/pages/discography.html
@@ -22,7 +22,7 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <img src="../img/logo.png" alt="">
+            <img src="../img/logo2.png" alt="">
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
