--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <img src="./img/logo2.png" alt="">
+            <img src="./img/LOGO.png" alt="">
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
