--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,8 +22,10 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <img src="../img/LOGO.png" alt="">
-        </div>
+            <a href="../index.html">
+                <img src="/img/logo.png" alt="Your Logo" class="logo">
+              </a>
+            </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
                 <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#n_bar"
@@ -45,7 +47,7 @@
     <!--FIN-DE-HEADER-->
     <main id="contacto_contenedor">
         <div class="info_contenedor">
-            <h1>CONTACT US </h1>
+
             <h2>Managment: deadhouserec@gmail.com</h2>
             <h2>Us: existencia.oficial@gmail.com</h2>
         </div>
