--- a/pages/discography.html
+++ b/pages/discography.html
@@ -22,8 +22,10 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <img src="../img/LOGO.png" alt="">
-        </div>
+            <a href="../index.html">
+                <img src="/img/logo.png" alt="Your Logo" class="logo">
+              </a>
+            </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
                 <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#n_bar"
