--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--HEADER-->
     <header>
         <div class="logo_contenedor">
-            <a href="../index.html">
+            <a href="./index.html">
                 <img src="/img/logo.png" alt="Your Logo" class="logo">
               </a>
             </div>
