--- a/pages/discography.html
+++ b/pages/discography.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Official Existencia">
     <meta name="keywords" content="metalcore/djent band, albums, gallery, and merch, stay tuned for upcoming releases">
     <title>Discography</title>
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="./img/logo.png">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
