--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Official Existencia">
     <meta name="keywords" content="metalcore/djent band, albums, gallery, and merch, stay tuned for upcoming releases">
     <title>Index</title>
-    <link rel="icon" href="./img/LOGO.png">
+    <link rel="icon" href="./img/logo.png">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -22,7 +22,7 @@
     <header>
         <div class="logo_contenedor">
             <a href="./index.html">
-                <img src="/img/LOGO.png" alt="Your Logo" class="logo">
+                <img src="/img/logo2.png" alt="Your Logo" class="logo">
               </a>
             </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
