--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="logo_contenedor">
             <a href="./index.html">
-                <img src="/img/logo2.png" alt="Your Logo" class="logo">
+                <img src="./img/logo2.png" alt="Your Logo" class="logo">
               </a>
             </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
