--- a/pages/discography.html
+++ b/pages/discography.html
@@ -23,7 +23,7 @@
     <header>
         <div class="logo_contenedor">
             <a href="../index.html">
-                <img src="/img/logo2.png" alt="Logo" class="logo">
+                <img src="../img/logo2.png" alt="Logo" class="logo">
               </a>
             </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
